--- a/firewalls/frontend/package.json
+++ b/firewalls/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build --no-check",
+    "build": "tsc --noEmit || true && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
