--- a/firewalls/frontend/tsconfig.node.json
+++ b/firewalls/frontend/tsconfig.node.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
-    
     "lib": ["ES2023"],
     "module": "ESNext",
     "types": ["node"],
@@ -13,7 +12,8 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": false,
+    "noEmit": true,                     // ✅ Fix this
+    "emitDeclarationOnly": false,
 
     /* Linting */
     "strict": true,
